# cocoapi

./: .gitignore
PythonAPI/: Makefile  pyproject.toml  setup.py
PythonAPI/pycocotools/: coco.py  cocoeval.py
